--- a/hooks/.config
+++ b/hooks/.config
@@ -34,16 +34,16 @@ declare -A docker_to_manifest_map=( ["aarch64"]="arm64" ["arm"]="arm" ["amd64"]=
 
 # what we want to build
 build_architectures=(amd64 arm)
-verified_build_architectures=()
-verified_build_architectures+=("$(docker version -f '{{.Server.Arch}}')")
+verified_build_architectures=(arm amd64)
+#verified_build_architectures+=("$(docker version -f '{{.Server.Arch}}')")
 
 # what we can build
-for arch in ${build_architectures[@]}; do
-  if [ -f "qemu-${docker_qemu_arch_map[${arch}]}-static" ]; then
-    # echo "qemu binary for $arch found";
-    verified_build_architectures+=($arch)
-  fi
-done
+#for arch in ${build_architectures[@]}; do
+#  if [ -f "qemu-${docker_qemu_arch_map[${arch}]}-static" ]; then
+#    # echo "qemu binary for $arch found";
+#    verified_build_architectures+=($arch)
+#  fi
+#done
 
 set -u
 
