--- a/hooks/.config
+++ b/hooks/.config
@@ -1,5 +1,23 @@
 #!/usr/bin/env bash
 
+case "${arch}" in
+    "arm")
+        JACKETT_ARCH="LinuxARM32"
+        ;;
+    "aarch64")
+        JACKETT_ARCH="LinuxARM64"
+        ;;
+    "amd64")
+        JACKETT_ARCH="LinuxAMDx64"
+        ;;
+    *)
+        JACKETT_ARCH="Unknown arch: ${arch}" && exit 1
+        ;;
+esac
+
+JACKETT_RELEASE=$(curl -k -s "https://api.github.com/repos/Jackett/Jackett/releases" | jq -r '.[0] | .tag_name') 
+JACKETT_URL=$(curl -k -s "https://api.github.com/repos/Jackett/Jackett/releases/tags/${JACKETT_RELEASE}" | jq -r '.assets[].browser_download_url' | grep ${JACKETT_ARCH})
+
 set +u
 echo "variables (see https://docs.docker.com/docker-hub/builds/advanced/):"
 echo "SOURCE_BRANCH:   $SOURCE_BRANCH"
