--- a/hooks/.config
+++ b/hooks/.config
@@ -36,7 +36,7 @@ declare -A jackett_arch_map=( ["arm64"]="LinuxARM64" ["arm"]="LinuxARM32" ["amd6
 
 # what we want to build
 build_architectures=(amd64 arm)
-verified_build_architectures=(arm amd64)
+verified_build_architectures=(amd64 arm)
 #verified_build_architectures+=("$(docker version -f '{{.Server.Arch}}')")
 
 # what we can build
