--- a/hooks/build
+++ b/hooks/build
@@ -4,10 +4,10 @@ set -eu
 echo "🔵 build"
 source hooks/.config
 
-echo "✅ Will build the following architectures: $verified_build_architectures"
+echo "✅ Will build the following architectures: $(IFS=, ; echo "${build_architectures[@]}")"
 echo "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
 
-for arch in ${verified_build_architectures[@]}; do
+for arch in ${build_architectures[@]}; do
   echo "✅ building $arch"
   echo "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
 
@@ -15,50 +15,21 @@ for arch in ${verified_build_architectures[@]}; do
   JACKETT_RELEASE=$(curl -k -s "https://api.github.com/repos/Jackett/Jackett/releases" | jq -r '.[0] | .tag_name') 
   JACKETT_URL=$(curl -k -s "https://api.github.com/repos/Jackett/Jackett/releases/tags/${JACKETT_RELEASE}" | jq -r '.assets[].browser_download_url' | grep ${JACKETT_ARCH})
 
-  BASE_IMAGE_PREFIX="${base_image_prefix_map[${arch}]}"
-  docker build \
-    --build-arg BASE_IMAGE_PREFIX=${BASE_IMAGE_PREFIX} \
+  docker exec docker_daemon docker build \
+    --squash \
+    --platform=${arch} \
+    --build-arg BASE_IMAGE_PREFIX=${base_image_prefix_map[${arch}]} \
     --build-arg ARCH=${arch} \
     --build-arg JACKETT_RELEASE=${JACKETT_RELEASE} \
     --build-arg JACKETT_ARCH=${JACKETT_ARCH} \
     --build-arg JACKETT_URL=${JACKETT_URL} \
-    --file $DOCKERFILE_PATH \
+    --file /build/$DOCKERFILE_PATH \
     --tag "${IMAGE_NAME}-${arch}"  \
-    .
+    /build
 done
 
 echo "✅ images built:"
 echo "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
-docker image ls
-
-# https://github.com/moby/moby/issues/36552
-#
-tempdir=$(mktemp -d -t yolo.XXXXXXXX)
-cd $tempdir
-
-for arch in ${verified_build_architectures[@]}; do
-  echo "✅ yolo fixing platform $arch"
-  echo "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
-
-  manifest_arch=${docker_to_manifest_map[${arch}]}
-  docker save "${IMAGE_NAME}-${arch}"| tar xv
-
-  for filename in */json; do
-    [ -e "$filename" ] || continue
-    jq --compact-output 'del(.architecture)' < "$filename" | sponge "$filename"
-  done
-
-  for filename in *.json; do
-    [ -e "$filename" ] || continue
-    ! [ $filename = "manifest.json" ] || continue
-
-    jq --arg architecture "$manifest_arch" \
-       --compact-output '.architecture=$architecture' < "$filename" | sponge "$filename"
-  done
-
-  tar cv . | docker load
-  rm -rf $tempdir/*
-done
+docker exec docker_daemon docker image ls
 
 trap "exit 1"          HUP INT PIPE QUIT TERM
-trap "rm -rf $tempdir" EXIT
