--- a/hooks/build
+++ b/hooks/build
@@ -17,9 +17,8 @@ for arch in ${build_architectures[@]}; do
 
   docker exec docker_daemon docker build \
     --squash \
-    --platform=${arch} \
+    --platform=${docker_arch_map[${arch}]} \
     --build-arg BASE_IMAGE_PREFIX=${base_image_prefix_map[${arch}]} \
-    --build-arg ARCH=${arch} \
     --build-arg JACKETT_RELEASE=${JACKETT_RELEASE} \
     --build-arg JACKETT_ARCH=${JACKETT_ARCH} \
     --build-arg JACKETT_URL=${JACKETT_URL} \
