--- a/hooks/.config
+++ b/hooks/.config
@@ -27,5 +27,5 @@ declare -A docker_arch_map=( ["arm32v5"]="arm" ["arm32v6"]="arm" ["arm32v7"]="ar
 declare -A jackett_arch_map=( ["arm32v5"]="LinuxARM32" ["arm32v6"]="LinuxARM32" ["arm32v7"]="LinuxARM32" ["arm64v8"]="LinuxARM64" ["amd64"]="LinuxAMDx64")
 
 # what we want to build
-build_architectures=(arm32v7 arm64v8 amd64)
+build_architectures=(amd64 arm32v7)
 set -u
